src/objects/Campsite__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campsites</relationshipLabel>
        <relationshipName>Campsites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextLong__c</fullName>
        <label>TextLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>testCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testCurrency__c</fullName>
        <label>testCurrency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>testDateTime__c</fullName>
        <label>testDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>testDate__c</fullName>
        <label>testDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testEmail__c</fullName>
        <label>testEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>testText__c</fullName>
        <label>testText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testautoNum__c</fullName>
        <label>testautoNum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>textRich__c</fullName>
        <label>textRich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Campsite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campsite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campsites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>